Fix some alignment stuff

--- a/src/scss/vapor/main-site.scss
+++ b/src/scss/vapor/main-site.scss
@@ -310,9 +310,9 @@ h2 {
 
     .blurry-background {
         background: linear-gradient(230.51deg,
-                #23acf040 27.41%,
-                #df3efb40 67%,
-                #70198040 80.12%);
+                rgba($gradient-blue, 0.25) 27.41%,
+                rgba($pink-300, 0.25) 67%,
+                rgba($pink-500, 0.25) 80.12%);
         filter: blur(100px);
     }
 
@@ -339,12 +339,12 @@ h2 {
         background:
             linear-gradient(white, white) padding-box,
             linear-gradient(90deg,
-                rgba(148, 168, 178, 0.03) 0%,
-                #f6f7f7 4.21%,
-                rgba(148, 168, 178, 0.888453) 7.98%,
-                #94a8b2 37.5%,
-                rgba(148, 168, 178, 0.117173) 90.41%,
-                rgba(148, 168, 178, 0) 100%) border-box;
+                rgba($code-outline-grey, 0.03) 0%,
+                $code-outline-light 4.21%,
+                rgba($code-outline-grey, 0.888453) 7.98%,
+                $code-outline-grey 37.5%,
+                rgba($code-outline-grey, 0.117173) 90.41%,
+                rgba($code-outline-grey, 0) 100%) border-box;
 
         @include media-breakpoint-down(lg) {
             height: 120%;
@@ -366,12 +366,12 @@ h2 {
         background:
             linear-gradient(white, white) padding-box,
             linear-gradient(90deg,
-                rgba(148, 168, 178, 0.01) 0%,
-                #f6f7f7 4.21%,
-                rgba(148, 168, 178, 0.888453) 9.96%,
-                #94a8b2 60.32%,
-                rgba(148, 168, 178, 0.117173) 90.41%,
-                rgba(148, 168, 178, 0.03) 100%) border-box;
+                rgba($code-outline-grey, 0.01) 0%,
+                $code-outline-light 4.21%,
+                rgba($code-outline-grey, 0.888453) 9.96%,
+                $code-outline-grey 60.32%,
+                rgba($code-outline-grey, 0.117173) 90.41%,
+                rgba($code-outline-grey, 0.03) 100%) border-box;
 
         @include media-breakpoint-down(lg) {
             height: 120%;
